# llm-template-minimal

./: .gitignore  README.md  pyproject.toml  setup.sh
src/: __init__.py  config.py  model_download.py
src/functions/: config_assets.py  vector_store_funcs.py
tests/: test_cuda_availability.py  test_ragchain.py  test_vllm.py
