[tool.poetry]
name = "team-ki-rag-template"
version = "0.1.0"
description = "Template repo som kan klones ned og brukes dersom du er keen på å sette sammen et nytt system"
authors = ["Benedikt Goodman <bgo@ssb.no>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dapla-toolbelt = ">=1.3.2"
ipykernel = ">=6.15.3"
et-xmlfile = "1.1.0"
torch = {version = "2.4.0", source = "pytorch_gpu"}
torchvision = "0.19.0"
vllm = "0.6.2"
pypdf = "^5.0.1"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
chromadb = "^0.5.12"
langchain-chroma = "^0.1.4"
langchain-huggingface = "^0.1.0"
sentence-transformers = "^3.1.1"
pandas = "^2.2.3"
bs4 = "^0.0.2"
unstructured = "^0.15.13"
markdown = "^3.7"
streamlit = "^1.39.0"
huggingface-hub = "^0.25.2"
tqdm = "^4.66.5"
ipywidgets = "^8.1.5"
iprogress = "^0.4"
langchain-openai = "^0.2.2"
langchain-anthropic = "^0.2.3"
langchain-mistralai = "^0.2.0"
pydantic = "^2.9.2"
evaluate = "^0.4.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
pytest-cov = ">=5.0.0"
black = {extras = ["jupyter"], version = ">=24.4.2"}
isort = ">=5.12.0"
pre-commit = ">=3.3.1"
pre-commit-hooks = ">=4.4.0"



[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
skip_gitignore = true
lines_after_imports = 2
# The line below is needed for jupyter notebooks stored as .py in percent format.
# See https://github.com/PyCQA/isort/issues/1338 for details
treat_comments_as_code = ["# %%"]

[tool.jupytext]
formats = "ipynb,auto:percent"
notebook_metadata_filter = "jupytext.text_representation,-jupytext.text_representation.jupytext_version,-widgets,-varInspector"
cell_metadata_filter = "-papermill,tags"

[tool.pytest.ini_options]
pythonpath = ["src"]
